--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node dist/space-ex-launcher/server/main.js",
+    "build": "ng run space-ex-launcher:prerender",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
