--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node dist/space-ex-launcher/server/main.js",
-    "build": "ng run space-ex-launcher:prerender",
+    "build": "ng build --prod && ng run space-ex-launcher:server:production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
