--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build --prod && ng run space-ex-launcher:server:production",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "ng run space-ex-launcher:cypress-run",
     "dev:ssr": "ng run space-ex-launcher:serve-ssr",
     "serve:ssr": "node dist/space-ex-launcher/server/main.js",
     "build:ssr": "ng build --prod && ng run space-ex-launcher:server:production",
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/platform-server": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@briebug/cypress-schematic": "^4.0.3",
     "@nguniversal/express-engine": "^9.1.1",
     "express": "^4.15.2",
     "intersection-observer": "^0.11.0",
@@ -35,12 +36,14 @@
     "@angular-devkit/build-angular": "~0.901.12",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
+    "@cypress/webpack-preprocessor": "5.4.5",
     "@nguniversal/builders": "^9.1.1",
     "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
+    "cypress": "5.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -49,6 +52,7 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
+    "ts-loader": "8.0.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
